; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_fourk_pager.c_fourk_pager_deallocate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_fourk_pager.c_fourk_pager_deallocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGER_ALL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"fourk_pager_deallocate: %p\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fourk_pager_deallocate(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @PAGER_ALL, align 4
  %5 = load i32, i32* %2, align 4
  %6 = sext i32 %5 to i64
  %7 = inttoptr i64 %6 to i8*
  %8 = call i32 @PAGER_DEBUG(i32 %4, i8* %7)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @fourk_pager_lookup(i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @FALSE, align 4
  %13 = call i32 @fourk_pager_deallocate_internal(i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @PAGER_DEBUG(i32, i8*) #1

declare dso_local i32 @fourk_pager_lookup(i32) #1

declare dso_local i32 @fourk_pager_deallocate_internal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
